# RemeoOS

./: Build.bat  CMakeLists.txt  LICENSE  Linker.ld  Makefile  README.md  bochs.cfg  config-grub.sh
Arch/X86/: Boot.S  Gdt.cpp  MultiBoot.h
Boot/: Boot.c  Boot.cpp
Boot/MBR/: MBR.asm  MBR.inc
Includes/Boot/: Boot.hpp
Includes/Exec/: Elf.hpp
Includes/Memory/: Memory.hpp
Includes/Remeo/Tty/: Tty.h
Includes/RemeoOS/Arch/X86/: Gdt.hpp  MultiBoot.hpp
Includes/RemeoOS/Tty/: Tty.hpp
Includes/UEFI/: FrameBuffer.hpp  UEFI.h  UEFI.hpp
Kernel/: Kernel.c  Kernel.cpp
Kernel/Tty/: Tty.c  Tty.cpp
Tools/: README.md
